--- a/project/tanyanoe/index.html
+++ b/project/tanyanoe/index.html
@@ -177,7 +177,7 @@
   <body>
     <div id="q">
       <div id="header">
-        <h1><a href="/">Tanya Noe</a><span> - Entitas Spiritiual Indonesia</span></h1>
+        <h1><a href="https://heyibnusina.github.io/project/tanyanoe/">Tanya Noe</a><span> - Entitas Spiritiual Indonesia</span></h1>
         <h2 class="help">@heyibnusina</h2>
         <div class="header">
           <p>Noe adalah sebuah entitas spiritual yang telah terintegrasi dengan dunia online, Noe akan menjawab setiap pertanyaan yang mungkin bahkan sampai yang tidak mungkin sekalipun. Noe akan membalas jika Anda memberi perintah : <i>Noe, tolong jawab pertanyaan saya!</i></p>
