--- a/project/tanyanoe/index.html
+++ b/project/tanyanoe/index.html
@@ -180,7 +180,7 @@
         <h1><a href="https://heyibnusina.github.io/project/tanyanoe/">Tanya Noe</a><span> - Entitas Spiritiual Indonesia</span></h1>
         <h2 class="help">@heyibnusina</h2>
         <div class="header">
-          <p>Noe adalah sebuah entitas spiritual yang telah terintegrasi dengan dunia online, Noe akan menjawab setiap pertanyaan yang mungkin bahkan sampai yang tidak mungkin sekalipun. Noe akan membalas jika Anda memberi perintah : <i>Noe, tolong jawab pertanyaan saya!</i></p>
+          <p>Noe adalah sebuah entitas spiritual yang telah terintegrasi dengan dunia online, Noe akan menjawab setiap pertanyaan yang mungkin bahkan sampai yang tidak mungkin sekalipun. Noe akan membalas jika kamu memberi perintah : <i>Noe, tolong jawab pertanyaan saya!</i></p>
         </div>
       </div>
       <br style="clear: both" />
@@ -188,13 +188,13 @@
         <div id="petitiontext">
           <p>Ketikkan Perintah</p>
           <div class="textborder">
-            <input id="petition" placeholder="Anda harus memasukkan perintah">
+            <input id="petition" placeholder="Kamu harus memasukkan perintah">
           </div>
         </div>
         <div id="questiontext">
-          <p>Ketikkan Pertanyaan Anda</p>
+          <p>Ketikkan Pertanyaan Kamu</p>
           <div class="textborder">
-            <input id="question" placeholder="Anda harus memberikan pertanyaan">
+            <input id="question" placeholder="Kamu harus memberikan pertanyaan">
           </div>
         </div>
       </div>
