--- a/project/tanyaputs/index.html
+++ b/project/tanyaputs/index.html
@@ -212,8 +212,8 @@
     </div>
 
     <div class="quote" style="display: none;">
-      <blockquote>"Kita bukan manusia yang memiliki pengalaman spiritual. Kita adalah makhluk spiritual yang memiliki pengalaman manusiawi.</blockquote>
-      <cite>&mdash; Pierre Teilhard de Chardin</cite>
+      <blockquote>"Exactly"</blockquote>
+      <cite>&mdash; Puts de Blund</cite>
     </div>
       
     <script type="text/javascript">
